--- a/assignments/lexer/tex/main.tex
+++ b/assignments/lexer/tex/main.tex
@@ -38,6 +38,10 @@
 
 \usepackage{enumerate} % To modify the enumerate environment
 
+\newcommand{\code}[1]{%
+  \lstinline[basicstyle=\footnotesize\ttfamily]$#1$%
+}
+
 %----------------------------------------------------------------------------------------
 %	ASSIGNMENT INFORMATION
 %----------------------------------------------------------------------------------------
@@ -45,7 +49,7 @@
 \title{Assignment \#1: Building a Lexer} % Assignment title
 
 
-\date{DUE DATE} % Due date
+\date{Friday of Week 4, 4pm} % Due date
 
 \institute{Union College} % Institute or school name
 
@@ -69,7 +73,7 @@
 	\begin{itemize}
 	    \item Familiarize yourself with the Rust programming language
         \item Complete the first part of code compilation, breaking a program string into lexical tokens
-        \item Pass all tests given in \textit{lexer\_tests.rs}
+        \item Pass all tests given in \code{lexer/tests}
         \item Work in groups of 2-3
         
 	\end{itemize}
@@ -82,7 +86,11 @@ From a high level, it might look like this step isn't even necessary. Why would 
 \\
 Behind the scenes, your text editor is doing a lot of heavy lifting. As humans we can easily read over our code that has comments and whitespace and structure, but to a computer this means nothing. From a computer's perspective, all it sees is one giant long list of characters next to each other with no natural way to see what it all "means".\\
 \\
-The point of a lexer is to take this giant string and try to make it a little more readable by a computer program, for example transforming something like "true || false" into the list of tokens [TRUE, OR, FALSE]. Doing this step will make our jobs much easier going forward and will allow us to have a more easily readable list of tokens instead of a raw list of characters to try and work with.
+The point of a lexer is to take this giant string and try to make it a little
+more readable by a computer program, for example transforming something like
+"true || false" into the list of tokens [TRUE, OR, FALSE]. Doing this step will
+make our jobs much easier going forward and will allow us to have a more easily
+readable list of tokens instead of a raw list of characters to try to work with.
 
 \pagebreak
 %----------------------------------------------------------------------------------------
@@ -102,30 +110,47 @@ The point of a lexer is to take this giant string and try to make it a little mo
 
 
 \section*{lib.rs:}
-This file defines the modules related to the lexer and makes them available for other modules to see. You can see this in the \textit{lexer/} folder. All modules have documentation in this file to show what the module is used for. The lexer is relatively simple, so all it has is a module containing the tokens it can use and the lexer itself.\\
+This file defines the modules related to the lexer and makes them available for other modules to see. You can see this in the \code{lexer/} folder. All modules have documentation in this file to show what the module is used for. The lexer is relatively simple, so all it has is a module containing the tokens it can use and the lexer itself.\\
 \\
 You don't have to do anything to this file.
 
 \section*{token.rs:}
-This file contains an \textbf{enum} which houses all of the tokens we have available to break the string into. The final output will be a \textbf{vector} (sort of like a list) of these tokens. For example, if when scanning through the program string you encounter a '(', you should probably add Token::LPAREN to your output vector. Other tokens will be more complex to detect.\\
+This file contains an \textbf{enum} which defines all of the tokens we have
+available to break the program string into. The final output will be a
+\textbf{vector} (sort of like a list) of these tokens. For example, if when
+scanning through the program string you encounter a '(', you should probably add
+Token::LPAREN to your output vector. Other tokens will be more complex to
+detect.\\
 \\
 Again, you don't have to do anything here. All of these tokens are given.
 
 \section*{lexer\_core.rs:}
 This is where the magic happens. This file is where the structure for taking a string input and scanning through it to create a list of tokens exists. \\
 \\
-All of the functions here have been intentionally left blank, and none of the tests will pass. That's kind of a problem since we need our lexer to function, so this is where you come in. 
+We've provided some functions for you, but they use other functions you'll
+either need to provide either partially or entirely.  As written, none of the
+tests will pass.
+
+The lexer starts with the function called \code{lex}, which takes the program string
+as a parameter and then repeatedly calls \code{lexer.next_token()} to get the next
+token (or an error).  When it's all done with the file, it returns a vector of
+tokens if there were no errors. It instead returns a vector of errors if there
+are any.
+
+I've provided a start to \code{next_token}, but you'll need to add
+substantially more to it.  In the provided code, I match on the current
+character to determine the token to return (the default match case gives an error).
 
 \pagebreak
 
-\section*{Follow these guidelines to build the lexer structure in lexer\_core.rs}
+\section*{Follow these guidelines to build the lexer structure in lexer/core.rs}
 
 \begin{problem}
     \begin{enumerate}
         \item Do not change any of the function signatures, i.e. leave all parameters, parameter types, and return types as you found them.
         \item Follow all instructions given in the comments where they exist, and take any potential hints into consideration when making your design.
         \item Remember you are scanning through a string one character at a time, but at times (such as with variable and function identifiers) you may need to collect more than one character for a token, this is okay.
-        \item Remember to check if a character is what you think it is before pushing a token to the output vector. If you see '<' that might be part of "<=", never assume!
+        \item Remember to check if a token is what you think it is before pushing a token to the output vector. If you see '<' that might be part of "<=", never assume!
         \item Start early. This may seem simple, but for many of you this is an entirely new language experience, and some concepts may take time to get used to.
         
     \end{enumerate}
@@ -134,7 +159,7 @@ All of the functions here have been intentionally left blank, and none of the te
 \section*{Cheat sheet for creating tokens}
 
 \begin{problem}
-    it might not be obvious how to create tokens before pushing them to the output vector, so here are some tips on how to do this.
+    It might not be obvious how to create tokens before pushing them to the output vector, so here are some tips on how to do this.
     \\
     \begin{enumerate}
         \item Tokens are part of the \textbf{Token enum} as showed before, so when creating one use "Token::" to signal you want to make an item from the Token enum, followed by the token's name. For example, if I want a token for '*' the token I want would be \textbf{Token::ASTERISK}.
